@@ -22,48 +22,123 @@ static char *edgex_value_tostring (const iot_data_t *value, bool binfloat)
 #define BUFSIZE 32
   char *res;
 
-  switch (iot_data_type (value))
+  if (iot_data_type (value) == IOT_DATA_ARRAY && devsdk_data_type (value) != DEVSDK_BINARY)
   {
-    case IOT_DATA_FLOAT32:
-      res = malloc (BUFSIZE);
-      if (binfloat)
-      {
-        float f = iot_data_f32 (value);
-        iot_b64_encode (&f, sizeof (float), res, BUFSIZE);
-      }
-      else
-      {
-        sprintf (res, "%.8e", iot_data_f32 (value));
-      }
-      break;
-    case IOT_DATA_FLOAT64:
-      res = malloc (BUFSIZE);
-      if (binfloat)
-      {
-        double d = iot_data_f64 (value);
-        iot_b64_encode (&d, sizeof (double), res, BUFSIZE);
-      }
-      else
-      {
-        sprintf (res, "%.16e", iot_data_f64 (value));
-      }
-      break;
-    case IOT_DATA_STRING:
-      res = strdup (iot_data_string (value));
-      break;
-    case IOT_DATA_ARRAY:
+    char vstr[BUFSIZE];
+    uint32_t length = iot_data_array_length (value);
+    res = malloc (BUFSIZE * length);
+    res[0] = 0;
+    for (uint32_t i = 0; i < length; i++)
     {
-      uint32_t sz, rsz;
-      const uint8_t *data = iot_data_address (value);
-      rsz = iot_data_array_size (value);
-      sz = iot_b64_encodesize (rsz);
-      res = malloc (sz);
-      iot_b64_encode (data, rsz, res, sz);
-      break;
+      switch (devsdk_data_type (value))
+      {
+        case DEVSDK_INT8ARRAY:
+          sprintf (vstr, "%" PRIi8, ((int8_t *)iot_data_address (value))[i]);
+          break;
+        case DEVSDK_UINT8ARRAY:
+          sprintf (vstr, "%" PRIu8, ((uint8_t *)iot_data_address (value))[i]);
+          break;
+        case DEVSDK_INT16ARRAY:
+          sprintf (vstr, "%" PRIi16, ((int16_t *)iot_data_address (value))[i]);
+          break;
+        case DEVSDK_UINT16ARRAY:
+          sprintf (vstr, "%" PRIu16, ((uint16_t *)iot_data_address (value))[i]);
+          break;
+        case DEVSDK_INT32ARRAY:
+          sprintf (vstr, "%" PRIi32, ((int32_t *)iot_data_address (value))[i]);
+          break;
+        case DEVSDK_UINT32ARRAY:
+          sprintf (vstr, "%" PRIu32, ((uint32_t *)iot_data_address (value))[i]);
+          break;
+        case DEVSDK_INT64ARRAY:
+          sprintf (vstr, "%" PRIi64, ((int64_t *)iot_data_address (value))[i]);
+          break;
+        case DEVSDK_UINT64ARRAY:
+          sprintf (vstr, "%" PRIu64, ((uint64_t *)iot_data_address (value))[i]);
+          break;
+        case DEVSDK_FLOAT32ARRAY:
+        {
+          float f = ((float *)iot_data_address (value))[i];
+          if (binfloat)
+          {
+            iot_b64_encode (&f, sizeof (float), vstr, BUFSIZE);
+          }
+          else
+          {
+            sprintf (vstr, "%.8e", f);
+          }
+          break;
+        }
+        case DEVSDK_FLOAT64ARRAY:
+        {
+          double d = ((double *)iot_data_address (value))[i];
+          if (binfloat)
+          {
+            iot_b64_encode (&d, sizeof (double), vstr, BUFSIZE);
+          }
+          else
+          {
+            sprintf (vstr, "%.16e", d);
+          }
+          break;
+        }
+        case DEVSDK_BOOLARRAY:
+          strcpy (vstr, ((bool *)iot_data_address (value))[i] ? "true" : "false");
+          break;
+        default:
+          strcpy (vstr, "?");
+      }
+      strcat (res, i ? ",\"" : "[\"");
+      strcat (res, vstr);
+      strcat (res, "\"");
     }
-    default:
-      res = iot_data_to_json (value);
-      break;
+    strcat (res, "]");
+  }
+  else
+  {
+    switch (devsdk_data_type (value))
+    {
+      case DEVSDK_FLOAT32:
+        res = malloc (BUFSIZE);
+        if (binfloat)
+        {
+          float f = iot_data_f32 (value);
+          iot_b64_encode (&f, sizeof (float), res, BUFSIZE);
+        }
+        else
+        {
+          sprintf (res, "%.8e", iot_data_f32 (value));
+        }
+        break;
+      case DEVSDK_FLOAT64:
+        res = malloc (BUFSIZE);
+        if (binfloat)
+        {
+          double d = iot_data_f64 (value);
+          iot_b64_encode (&d, sizeof (double), res, BUFSIZE);
+        }
+        else
+        {
+          sprintf (res, "%.16e", iot_data_f64 (value));
+        }
+        break;
+      case DEVSDK_STRING:
+        res = strdup (iot_data_string (value));
+        break;
+      case DEVSDK_BINARY:
+      {
+        uint32_t sz, rsz;
+        const uint8_t *data = iot_data_address (value);
+        rsz = iot_data_array_size (value);
+        sz = iot_b64_encodesize (rsz);
+        res = malloc (sz);
+        iot_b64_encode (data, rsz, res, sz);
+        break;
+      }
+      default:
+        res = iot_data_to_json (value);
+        break;
+    }
   }
   return res;
 }
@@ -81,6 +156,12 @@ edgex_event_cooked *edgex_data_process_event
   uint64_t timenow = iot_time_nsecs ();
   for (uint32_t i = 0; i < commandinfo->nreqs; i++)
   {
+    if (commandinfo->reqs[i].type == DEVSDK_BINARY)
+    {
+      iot_data_t *b = iot_data_alloc_bool (true);
+      iot_data_set_metadata (values[i].value, b);
+      iot_data_free (b);
+    }
     if (doTransforms)
     {
       edgex_transform_outgoing (&values[i], commandinfo->pvals[i], commandinfo->maps[i]);
@@ -149,7 +230,7 @@ edgex_event_cooked *edgex_data_process_event
         .value = cbor_move (cbor_build_string (edgex_propertytype_tostring (commandinfo->reqs[i].type)))
       });
 
-      if (commandinfo->reqs[i].type == IOT_DATA_FLOAT32 || commandinfo->reqs[i].type == IOT_DATA_FLOAT64)
+      if (commandinfo->reqs[i].type == DEVSDK_FLOAT32 || commandinfo->reqs[i].type == DEVSDK_FLOAT64)
       {
         cbor_map_add (crdg, (struct cbor_pair)
         {
@@ -197,11 +278,11 @@ edgex_event_cooked *edgex_data_process_event
       json_object_set_string (robj, "value", reading);
       json_object_set_uint (robj, "origin", values[i].origin ? values[i].origin : timenow);
       json_object_set_string (robj, "valueType", edgex_propertytype_tostring (commandinfo->reqs[i].type));
-      if (commandinfo->reqs[i].type == IOT_DATA_FLOAT32 || commandinfo->reqs[i].type == IOT_DATA_FLOAT64)
+      if (commandinfo->reqs[i].type == DEVSDK_FLOAT32 || commandinfo->reqs[i].type == DEVSDK_FLOAT64)
       {
         json_object_set_string (robj, "floatEncoding", commandinfo->pvals[i]->floatAsBinary ? "base64" : "eNotation");
       }
-      else if (commandinfo->reqs[i].type == IOT_DATA_ARRAY)
+      else if (commandinfo->reqs[i].type == DEVSDK_BINARY)
       {
         json_object_set_string (robj, "mediaType", commandinfo->pvals[i]->mediaType);
       }
