@@ -17,8 +17,8 @@ edgex_strings *edgex_strings_dup (const edgex_strings *strs);
 void edgex_strings_free (edgex_strings *strs);
 edgex_nvpairs *edgex_nvpairs_dup (const edgex_nvpairs *p);
 void edgex_nvpairs_free (edgex_nvpairs *p);
-const char *edgex_propertytype_tostring (iot_data_type_t pt);
-bool edgex_propertytype_fromstring (iot_data_type_t *res, const char *str);
+const char *edgex_propertytype_tostring (devsdk_propertytype pt);
+bool edgex_propertytype_fromstring (devsdk_propertytype *res, const char *str);
 edgex_protocols *edgex_protocols_dup (const edgex_protocols *e);
 void edgex_protocols_free (edgex_protocols *e);
 edgex_deviceprofile *edgex_deviceprofile_read (iot_logger_t *lc, const char *json);
